@@ -19,6 +19,7 @@ AV2 Changelog :: version a4.0
 * Vanilla mobs have rare chances of dropping scrolls
 * Can use [keybinding=key.X] in .lang file to use a keybinding
 * Can get water arcs from cauldrons
+* Option in cosmetic.yml to use vanilla instead of avatar particles
 
 > Fix airblade weird angles
 > Fix flamethrower not aggroing mobs
